--- a/milestone_1/assets/css/style.css
+++ b/milestone_1/assets/css/style.css
@@ -1,5 +1,40 @@
+.debug {
+    background-color: rgba(255, 0, 0, 0.3);
+    border: 1px solid red;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.main-wrapper {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to top,
+            #b8b8b8 0%,
+            #b8b8b8 80%,
+            #009688 80%,
+            #009688 100%);
+}
+
+.main-container {
+    width: 80%;
+    height: 95%;
+    background-color: #fff;
+}
+
+.col-left {
+    width: 30%;
+    min-width: 300px;
+    height: 100%;
+}
+
+.col-right {
+    width: 70%;
+    height: 100%;
 }
