--- a/milestone_1/assets/css/style.css
+++ b/milestone_1/assets/css/style.css
@@ -91,7 +91,7 @@ img {
 }
 
 .container-notification i {
-    padding: 10px;
+    padding: 12px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.85);
     margin-right: 10px;
@@ -117,6 +117,7 @@ img {
     display: flex;
     align-items: center;
     padding: 0 5px;
+    margin-bottom: 5px;
 }
 
 .container-input {
